# oopsiestreefourfive

./: README.md  readme.md
Project/: README.md
Project/MS1/: CMakeLists.txt  Item.cpp  Item.h  Utilities.h  a.out
Project/MS2/: CMakeLists.txt  CustomerOrder.h  Item.cpp  Utilities.cpp  a.out  ms2.cpp
Project/MS3/: CustomerOrder.cpp  Item.cpp  LineManager.cpp  LineManager.h  Task.cpp  Task.h  a.out
Project/MS3 copy/: CMakeLists.txt  CustomerOrder.cpp  LineManager.cpp  LineManager.h  Task.cpp  Task.h  Utilities.h
WS01/at-home/: String.cpp  String.h  a.out  process.cpp  process.h  w1_home.cpp
WS01/in-lab/: String.cpp  String.h  a.out  process.cpp  process.h  w1_lab.cpp
WS02/at-home/: Text.cpp  Text.h  TimedEvents.cpp  TimedEvents.h  a.out  reflect.txt  w2_home.cpp
WS02/in-lab/: Text.cpp  Text.h  TimedEvents.cpp  TimedEvents.h  a.out  w2_lab.cpp
WS03/at-home/: LVPair.h  List.h  a.out  reflect.txt  test.cpp  test.h
WS03/in-lab/: LVPair.cpp  LVPair.h  List.cpp  List.h  a.out  w3_lab.cpp
WS04/at-home/: ConfirmationSender.cpp  ConfirmationSender.h  Reservation.cpp  Reservation.h  Restaurant.cpp  Restaurant.h  a.out  reflect.txt.rtf
WS04/in-lab/: Reservation.cpp  Reservation.h  a.out  ws04 in-lab.cpp
WS05/: Book.h
WS05/at-home-modified/: Book.cpp  Book.h  Collection.h  Movie  Movie.cpp  Movie.h  SpellChecker.cpp  SpellChecker.h  a.out  reflect.rtf  (+2 more)
WS08/at-home/: CMakeLists.txt  Element.h  List.h  Utilities.cpp  Utilities.h  reflect.txt  w8_home.cpp
WS08/in-lab/: CMakeLists.txt  Element.h  List.h  Utilities.cpp  Utilities.h  a.out  w8_lab.cpp
(+50 files in other folders)
